--- a/app/src/main/res/layout/activity_sound.xml
+++ b/app/src/main/res/layout/activity_sound.xml
@@ -106,7 +106,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@android:drawable/ic_media_play"
-                    android:layout_margin="10sp"
+                    android:padding="10sp"
                     android:background="?attr/selectableItemBackground"
                     android:id="@+id/play"/>
 
@@ -114,7 +114,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@android:drawable/ic_media_pause"
-                    android:layout_margin="10sp"
+                    android:padding="10sp"
                     android:background="?attr/selectableItemBackground"
                     android:id="@+id/pause"
                     android:layout_toEndOf="@+id/play"/>
