--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,8 +1,104 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:map="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/map"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+android:id="@+id/activity_gps"
+android:layout_width="match_parent"
+android:layout_height="match_parent">
+
+<android.support.v7.widget.Toolbar
+    android:id="@+id/toolbar"
+    android:background="@color/colorPrimary"
+    android:layout_width="match_parent"
+    android:layout_height="?attr/actionBarSize">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="Sense It All!"
+        android:fontFamily="sans-serif-smallcaps"
+        android:textColor="#FFF"
+        android:textSize="20sp"
+        android:gravity="center"/>
+
+</android.support.v7.widget.Toolbar>
+
+<FrameLayout
+    android:layout_width="match_parent"
+    android:id="@+id/toolbar2"
+    android:layout_height="?attr/actionBarSize"
+    android:background="@color/colorPrimary"
+    android:layout_marginTop="?actionBarSize">
+
+</FrameLayout>
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:id="@+id/ll"
+    android:layout_below="@+id/toolbar">
+
+    <android.support.v7.widget.CardView
+        android:layout_width="0sp"
+        android:layout_height="150sp"
+        android:layout_weight="1"
+        android:layout_margin="10sp"
+        app:cardCornerRadius="10sp"
+        app:cardElevation="@dimen/app_bar_elevation">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:src="@drawable/gps"
+            android:padding="10sp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:layout_width="0sp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:padding="5sp"
+        android:layout_margin="10sp"
+        app:cardCornerRadius="10sp"
+        app:cardBackgroundColor="@color/colorPrimaryLight"
+        app:cardElevation="@dimen/app_bar_elevation">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:elevation="@dimen/app_bar_elevation"
+            android:textSize="15sp"
+            android:fontFamily="sans-serif-smallcaps"
+            android:textStyle="bold"
+            android:padding="6sp"
+            android:gravity="center"
+            android:textColor="@color/colorBlackShade"
+            android:text="SAMPLE DATA"/>
+
+    </android.support.v7.widget.CardView>
+
+</LinearLayout>
+
+<android.support.v7.widget.CardView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.appbusters.robinkamboj.senseitall.view.rishabh.MapsActivity" />
+    app:cardElevation="@dimen/app_bar_elevation"
+    app:cardCornerRadius="10sp"
+    android:layout_margin="10sp"
+    android:layout_below="@+id/ll"
+    android:id="@+id/card">
+
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:map="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+</android.support.v7.widget.CardView>
+
+</RelativeLayout>
