--- a/app/src/main/res/layout-land/activity_fingerprint.xml
+++ b/app/src/main/res/layout-land/activity_fingerprint.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_camera"
+    android:id="@+id/activity_fingerprint"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
