--- a/app/src/main/res/layout/activity_microphone.xml
+++ b/app/src/main/res/layout/activity_microphone.xml
@@ -128,7 +128,7 @@
                 android:layout_below="@+id/start_rec"
                 android:layout_centerHorizontal="true"
                 style="@style/AVLoadingIndicatorView.Large"
-                android:visibility="visible"
+                android:visibility="invisible"
                 app:indicatorName="BallClipRotatePulseIndicator"
                 app:indicatorColor="@color/colorAccent"
                 android:layout_margin="5sp"
@@ -170,7 +170,7 @@
                 android:layout_below="@+id/play"
                 android:layout_centerHorizontal="true"
                 style="@style/AVLoadingIndicatorView.Large"
-                android:visibility="visible"
+                android:visibility="invisible"
                 app:indicatorName="BallTrianglePathIndicator"
                 app:indicatorColor="@color/colorAccent"
                 android:layout_margin="5sp"
