--- a/app/src/main/res/layout/activity_magnetic.xml
+++ b/app/src/main/res/layout/activity_magnetic.xml
@@ -66,7 +66,7 @@
             app:cardElevation="@dimen/app_bar_elevation">
 
             <TextView
-                android:id="@+id/tvMG"
+                android:id="@+id/textView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:elevation="@dimen/app_bar_elevation"
@@ -76,7 +76,7 @@
                 android:padding="6sp"
                 android:gravity="center"
                 android:textColor="@color/colorBlackShade"
-                android:text="MAGNETIC FIELD SENSOR"/>
+                android:text="SAMPLE DATA"/>
 
         </android.support.v7.widget.CardView>
 
