--- a/app/src/main/res/layout/activity_multi_touch.xml
+++ b/app/src/main/res/layout/activity_multi_touch.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_camera"
+    android:id="@+id/activity_multi_touch"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -67,7 +66,7 @@
             app:cardElevation="@dimen/app_bar_elevation">
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/sensor"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:elevation="@dimen/app_bar_elevation"
