--- a/app/src/main/res/layout/activity_gravity.xml
+++ b/app/src/main/res/layout/activity_gravity.xml
@@ -50,7 +50,7 @@
             <ImageView
                 android:id="@+id/imageView"
                 android:padding="10sp"
-                android:src="@drawable/accelerometer"
+                android:src="@drawable/apple"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
@@ -77,7 +77,7 @@
                 android:padding="6sp"
                 android:gravity="center"
                 android:textColor="@color/colorBlackShade"
-                android:text="Gravity Sensor"/>
+                android:text="SAMPLE DATA"/>
 
         </android.support.v7.widget.CardView>
 
@@ -220,12 +220,9 @@
                     android:gravity="start"
                     android:id="@+id/resolution"/>
 
-
-
             </LinearLayout>
 
         </ScrollView>
-
 
     </android.support.v7.widget.CardView>
 
