layout color/size for production.

--- a/app/src/main/res/layout/activity_step_detector.xml
+++ b/app/src/main/res/layout/activity_step_detector.xml
@@ -75,7 +75,7 @@
                 android:textStyle="bold"
                 android:padding="6sp"
                 android:gravity="center"
-                android:textColor="@color/colorWhiteShade"
+                android:textColor="@color/colorBlackShade"
                 android:text="SAMPLE DATA"/>
 
         </android.support.v7.widget.CardView>
