--- a/app/src/main/res/layout-land/activity_camera.xml
+++ b/app/src/main/res/layout-land/activity_camera.xml
@@ -60,7 +60,7 @@
                 app:cardElevation="@dimen/app_bar_elevation"
                 android:layout_weight="1"
                 app:cardCornerRadius="5sp"
-                app:cardBackgroundColor="@color/colorPrimaryLight"
+                app:cardBackgroundColor="@color/colorPrimaryDark"
                 android:layout_margin="10sp">
 
                 <TextView
@@ -68,11 +68,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:padding="5sp"
-                    android:textSize="15sp"
+                    android:textSize="20sp"
+                    android:textColor="@color/colorWhiteShade"
                     android:fontFamily="sans-serif-smallcaps"
                     android:textStyle="bold"
                     android:gravity="center"
-                    android:textColor="@color/colorBlackShade"
                     android:text="SAMPLE DATA"/>
 
             </android.support.v7.widget.CardView>
