--- a/app/src/main/res/layout/activity_gsm.xml
+++ b/app/src/main/res/layout/activity_gsm.xml
@@ -63,7 +63,7 @@
             android:padding="5sp"
             android:layout_margin="10sp"
             app:cardCornerRadius="10sp"
-            app:cardBackgroundColor="@color/colorPrimaryLight"
+            app:cardBackgroundColor="@color/colorPrimaryDark"
             app:cardElevation="@dimen/app_bar_elevation">
 
             <TextView
@@ -71,13 +71,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:elevation="@dimen/app_bar_elevation"
-                android:textSize="15sp"
+                android:textSize="20sp"
+                android:textColor="@color/colorWhiteShade"
                 android:gravity="center"
                 android:fontFamily="sans-serif-smallcaps"
                 android:layout_gravity="center"
                 android:textStyle="bold"
                 android:padding="6sp"
-                android:textColor="@color/colorBlackShade"
                 android:text="SAMPLE DATA"/>
 
         </android.support.v7.widget.CardView>
