--- a/app/src/main/res/layout-land/activity_audio_video.xml
+++ b/app/src/main/res/layout-land/activity_audio_video.xml
@@ -38,9 +38,15 @@
         android:id="@+id/ll"
         android:layout_below="@+id/toolbar">
 
-        <android.support.v7.widget.CardView
+        <LinearLayout
             android:layout_width="0sp"
-            android:layout_height="150sp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="0sp"
             android:layout_weight="1"
             android:layout_margin="10sp"
             app:cardCornerRadius="10sp"
@@ -56,8 +62,8 @@
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
-            android:layout_width="0sp"
-            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:layout_height="0sp"
             android:layout_weight="1"
             android:padding="5sp"
             android:layout_margin="10sp"
@@ -83,10 +89,11 @@
     </LinearLayout>
 
     <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
+        android:layout_width="0sp"
         android:layout_height="match_parent"
         app:cardElevation="@dimen/app_bar_elevation"
         app:cardCornerRadius="5sp"
+        android:layout_weight="2"
         android:layout_margin="10sp"
         android:layout_below="@+id/ll">
         <LinearLayout
@@ -179,5 +186,7 @@
 
 
     </android.support.v7.widget.CardView>
+
+    </LinearLayout>
 
 </RelativeLayout>
