--- a/app/src/main/res/layout/activity_audio_video.xml
+++ b/app/src/main/res/layout/activity_audio_video.xml
@@ -48,7 +48,7 @@
 
             <ImageView
                 android:id="@+id/imageView"
-                android:src="@drawable/nfc"
+                android:src="@drawable/aud_vid"
                 android:padding="10sp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
@@ -62,7 +62,7 @@
             android:padding="5sp"
             android:layout_margin="10sp"
             app:cardCornerRadius="10sp"
-            app:cardBackgroundColor="@color/colorPrimaryLight"
+            app:cardBackgroundColor="@color/colorPrimaryDark"
             app:cardElevation="@dimen/app_bar_elevation">
 
             <TextView
@@ -70,12 +70,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:elevation="@dimen/app_bar_elevation"
-                android:textSize="15sp"
+                android:textSize="20sp"
                 android:fontFamily="sans-serif-smallcaps"
                 android:textStyle="bold"
                 android:padding="6sp"
                 android:gravity="center"
-                android:textColor="@color/colorBlackShade"
+                android:textColor="@color/colorWhiteShade"
                 android:text="Audio/Video Outputs"/>
 
         </android.support.v7.widget.CardView>
