landscape changes done

--- a/app/src/main/res/layout/activity_compass.xml
+++ b/app/src/main/res/layout/activity_compass.xml
@@ -77,7 +77,7 @@ android:layout_height="match_parent">
             android:padding="6sp"
             android:gravity="center"
             android:textColor="@color/colorWhiteShade"
-            android:text="SAMPLE DATA"/>
+            android:text="COMPASS"/>
 
     </android.support.v7.widget.CardView>
 
