--- a/app/src/main/res/layout-land/activity_gyroscope.xml
+++ b/app/src/main/res/layout-land/activity_gyroscope.xml
@@ -80,7 +80,7 @@
                     android:fontFamily="sans-serif-smallcaps"
                     android:textStyle="bold"
                     android:gravity="center"
-                    android:text="SAMPLE DATA"/>
+                    android:text="Gyroscope Sensor"/>
 
             </android.support.v7.widget.CardView>
 
