--- a/app/src/main/res/layout-land/activity_pressure.xml
+++ b/app/src/main/res/layout-land/activity_pressure.xml
@@ -82,7 +82,7 @@
                     android:textStyle="bold"
                     android:padding="6sp"
                     android:gravity="center"
-                    android:text="SAMPLE DATA"/>
+                    android:text="PRESSURE SENSOR"/>
 
             </android.support.v7.widget.CardView>
 
