--- a/app/src/main/res/layout/activity_gravity.xml
+++ b/app/src/main/res/layout/activity_gravity.xml
@@ -77,7 +77,7 @@
                 android:textStyle="bold"
                 android:padding="6sp"
                 android:gravity="center"
-                android:text="SAMPLE DATA"/>
+                android:text="GRAVITY SENSOR"/>
 
         </android.support.v7.widget.CardView>
 
