--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,29 @@
     <color name="colorBlackShade2">#7F7F7F</color>
     <color name="colorBlackShade3">#CCCBCA</color>
     <color name="colorTest">#E65100</color>
+
+    <color name="colorIntensity1">#212121</color>
+    <color name="colorIntensity2">#424242</color>
+    <color name="colorIntensity3">#616161</color>
+    <color name="colorIntensity4">#757575</color>
+    <color name="colorIntensity5">#9E9E9E</color>
+    <color name="colorIntensity6">#BDBDBD</color>
+    <color name="colorIntensity7">#E0E0E0</color>
+    <color name="colorIntensity8">#EEEEEE</color>
+    <color name="colorIntensity9">#F5F5F5</color>
+    <color name="colorIntensity10">#FAFAFA</color>
+
+    <array name="intensityColors">
+        <item>#212121</item>
+        <item>#424242</item>
+        <item>#616161</item>
+        <item>#757575</item>
+        <item>#9e9e9e</item>
+        <item>#bdbdbd</item>
+        <item>#e0e0e0</item>
+        <item>#eeeeee</item>
+        <item>#f5f5f5</item>
+        <item>#fafafa</item>
+    </array>
+
 </resources>
