--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -1,128 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_camera"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:custom="http://schemas.android.com/tools"
+android:id="@+id/activity_camera"
+android:fitsSystemWindows="true"
+android:layout_width="match_parent"
+android:layout_height="match_parent">
+
+<LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
-        android:background="@color/colorPrimary"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize">
-
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:gravity="center"
             android:text="Sense It All!"
-            android:fontFamily="sans-serif-smallcaps"
             android:textColor="#FFF"
+            android:fontFamily="sans-serif-smallcaps"
             android:textSize="20sp"
-            android:gravity="center"/>
+            android:layout_weight="1"
+            android:id="@+id/textView"
+            android:textStyle="normal|bold" />
 
     </android.support.v7.widget.Toolbar>
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:id="@+id/toolbar2"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorPrimary"
-        android:layout_marginTop="?actionBarSize">
+        android:layout_height="wrap_content">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/colorPrimary"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:id="@+id/card"
+            android:text="Main Camera"
+            android:textColor="@color/colorWhiteShade"
+            android:background="@color/colorPrimaryDark"
+            android:textStyle="bold"
+            android:fontFamily="cursive"
+            android:gravity="center"
+            android:textSize="20sp"
+            android:layout_marginTop="20sp"
+            android:layout_marginStart="15sp"
+            android:layout_marginEnd="15sp">
+
+        </TextView>
 
     </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/ll"
-        android:layout_below="@+id/toolbar">
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal"
+        android:layout_margin="5sp"
+        android:orientation="vertical">
 
         <android.support.v7.widget.CardView
-            android:layout_width="0sp"
-            android:layout_height="150sp"
-            android:layout_weight="1"
-            android:layout_margin="10sp"
-            app:cardCornerRadius="10sp"
-            app:cardElevation="@dimen/app_bar_elevation">
-
-            <ImageView
-                android:id="@+id/imageView"
-                android:src="@drawable/camera"
-                android:padding="10sp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-            android:layout_width="0sp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:padding="5sp"
+            app:cardElevation="@dimen/app_bar_elevation"
+            app:cardCornerRadius="5sp"
             android:layout_margin="10sp"
-            app:cardCornerRadius="10sp"
-            app:cardBackgroundColor="@color/colorPrimaryDark"
-            app:cardElevation="@dimen/app_bar_elevation">
+            android:layout_below="@+id/ll">
 
-            <TextView
-                android:id="@+id/textView"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:elevation="@dimen/app_bar_elevation"
-                android:textSize="20sp"
-                android:textColor="@color/colorWhiteShade"
-                android:fontFamily="sans-serif-smallcaps"
-                android:textStyle="bold"
-                android:padding="6sp"
-                android:gravity="center"
-                android:text="SAMPLE DATA"/>
+                android:layout_height="match_parent">
+
+                <SurfaceView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/preview"/>
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Show Preview"
+                    android:id="@+id/show_preview"
+                    android:layout_gravity="bottom|left"
+                    android:textSize="10sp"
+                    android:layout_margin="10sp"
+                    android:textColor="@color/colorBlackShade"
+                    android:backgroundTint="@color/colorWhiteShade"
+                    android:padding="10sp"/>
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Stop Preview"
+                    android:id="@+id/stop_preview"
+                    android:textSize="10sp"
+                    android:layout_gravity="bottom|right"
+                    android:textColor="@color/colorBlackShade"
+                    android:layout_margin="10sp"
+                    android:backgroundTint="@color/colorWhiteShade"
+                    android:padding="10sp"/>
+
+            </FrameLayout>
 
         </android.support.v7.widget.CardView>
 
     </LinearLayout>
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:cardElevation="@dimen/app_bar_elevation"
-        app:cardCornerRadius="5sp"
-        android:layout_margin="10sp"
-        android:layout_below="@+id/ll">
+</LinearLayout>
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <SurfaceView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/preview"/>
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Show Preview"
-                android:id="@+id/show_preview"
-                android:layout_gravity="bottom|left"
-                android:layout_margin="10sp"
-                android:textColor="@color/colorWhiteShade"
-                android:backgroundTint="@color/colorPrimaryDark"
-                android:padding="10sp"/>
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Stop Preview"
-                android:id="@+id/stop_preview"
-                android:layout_gravity="bottom|right"
-                android:textColor="@color/colorWhiteShade"
-                android:layout_margin="10sp"
-                android:backgroundTint="@color/colorPrimaryDark"
-                android:padding="10sp"/>
-
-        </FrameLayout>
-
-    </android.support.v7.widget.CardView>
-
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
