android studio 3.0 support

--- a/app/src/main/res/layout/activity_gyroscope.xml
+++ b/app/src/main/res/layout/activity_gyroscope.xml
@@ -87,7 +87,8 @@
                         android:textSize="15sp"
                         android:textColor="@color/colorWhiteShade"
                         android:background="@color/colorPrimaryDark"
-                        android:gravity="center"/>
+                        android:gravity="center"
+                        android:visibility="gone"/>
 
                     <ScrollView
                         android:layout_width="match_parent"
