--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.appbusters.robinkamboj.senseitall.view.ListActivity">
+    tools:context=".view.activities.list.ListActivity">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
