--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.appbusters.robinkamboj.senseitall.view.MainActivity">
+    tools:context=".view.activities.main.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
